Upadate LK students

--- a/st-certificate.html
+++ b/st-certificate.html
@@ -120,53 +120,50 @@
                   <div class="lkSerts">
                     <div class="lkSerts__item">
                       <div class="lkSerts__img"><img src="img/sert-1.jpg" alt=""/></div>
-                      <div class="lkSerts__name">«Сертифицированный <br>менеджер»</div>
+                      <div class="lkSerts__name">«Сертифицированный менеджер»</div>
                     </div>
                     <div class="lkSerts__item">
                       <div class="lkSerts__img"><img src="img/sert-2.jpg" alt=""/></div>
-                      <div class="lkSerts__name">«Сертифицированный <br>менеджер»</div>
+                      <div class="lkSerts__name">«Сертифицированный менеджер»</div>
                     </div>
                     <div class="lkSerts__item">
                       <div class="lkSerts__img"><img src="img/sert-3.jpg" alt=""/></div>
-                      <div class="lkSerts__name">«Сертифицированный <br>менеджер»</div>
+                      <div class="lkSerts__name">«Сертифицированный менеджер»</div>
                     </div>
                     <div class="lkSerts__item">
                       <div class="lkSerts__img"><img src="img/sert-2.jpg" alt=""/></div>
-                      <div class="lkSerts__name">«Сертифицированный <br>менеджер»</div>
+                      <div class="lkSerts__name">«Сертифицированный менеджер»</div>
                     </div>
                     <div class="lkSerts__item">
                       <div class="lkSerts__img"><img src="img/sert-1.jpg" alt=""/></div>
-                      <div class="lkSerts__name">«Сертифицированный <br>менеджер»</div>
+                      <div class="lkSerts__name">«Сертифицированный менеджер»</div>
                     </div>
                   </div>
               <h2 class="subtitle">Сертификаты в процессе</h2>
                   <div class="lkSerts">
                     <div class="lkSerts__item">
                       <div class="lkSerts__img"><img src="img/sert-2.jpg" alt=""/></div>
-                      <div class="lkSerts__name">«Сертифицированный <br>менеджер»</div>
+                      <div class="lkSerts__progress">
+                        <div class="lkSerts__label">Завершено 25%</div>
+                        <div class="lkSerts__bar"><span style="width: 25%"></span></div>
+                      </div>
+                      <div class="lkSerts__name">«Сертифицированный менеджер»</div>
                     </div>
                     <div class="lkSerts__item">
                       <div class="lkSerts__img"><img src="img/sert-1.jpg" alt=""/></div>
-                      <div class="lkSerts__name">«Сертифицированный <br>менеджер»</div>
+                      <div class="lkSerts__progress">
+                        <div class="lkSerts__label">Завершено 65%</div>
+                        <div class="lkSerts__bar"><span style="width: 65%"></span></div>
+                      </div>
+                      <div class="lkSerts__name">«Сертифицированный менеджер»</div>
                     </div>
                     <div class="lkSerts__item">
                       <div class="lkSerts__img"><img src="img/sert-4.jpg" alt=""/></div>
-                      <div class="lkSerts__name">«Сертифицированный <br>менеджер»</div>
-                    </div>
-                  </div>
-              <h2 class="subtitle">Рекомендованные к получению сертификаты</h2>
-                  <div class="lkSerts">
-                    <div class="lkSerts__item">
-                      <div class="lkSerts__img"><img src="img/sert-2.jpg" alt=""/></div>
-                      <div class="lkSerts__name">«Сертифицированный <br>менеджер»</div>
-                    </div>
-                    <div class="lkSerts__item">
-                      <div class="lkSerts__img"><img src="img/sert-1.jpg" alt=""/></div>
-                      <div class="lkSerts__name">«Сертифицированный <br>менеджер»</div>
-                    </div>
-                    <div class="lkSerts__item">
-                      <div class="lkSerts__img"><img src="img/sert-4.jpg" alt=""/></div>
-                      <div class="lkSerts__name">«Сертифицированный <br>менеджер»</div>
+                      <div class="lkSerts__progress">
+                        <div class="lkSerts__label">Завершено 97%</div>
+                        <div class="lkSerts__bar"><span style="width: 97%"></span></div>
+                      </div>
+                      <div class="lkSerts__name">«Сертифицированный менеджер»</div>
                     </div>
                   </div>
             </div>
