--- a/st-courses.html
+++ b/st-courses.html
@@ -115,7 +115,9 @@
               <!-- end prmoSlider-->
             </div>
             <div class="lk__content">
-              <h2 class="subtitle">Траектория</h2>
+              <h2 class="subtitle">Рекомендательная система</h2>
+              <p>Выберите, в каком направлении Вы хотели бы развиваться, и подберем индивидуальную программу обучения для Вас</p>
+              <h2 class="subtitle">Компетенции</h2>
               <div class="chartBox"><img src="img/chart-trangle.jpg" alt=""/></div>
               <h2 class="subtitle">Список курсов</h2>
               <div class="smallBox">
