--- a/st-home.html
+++ b/st-home.html
@@ -119,33 +119,33 @@
                 <div class="lkProgress">
                   <div class="lkProgress__item">
                     <div class="lkProgress__label">Стратегический менеджмент в контексте управления государством</div>
-                    <div class="lkProgress__line"><span style="width: 35%"></span></div>
+                    <div class="lkProgress__line"><span class="warning" style="width: 35%"></span></div>
                     <div class="lkProgress__percent">35% пройдено</div>
                   </div>
                   <div class="lkProgress__item">
                     <div class="lkProgress__label">Стратегический менеджмент</div>
-                    <div class="lkProgress__line"><span style="width: 50%"></span></div>
+                    <div class="lkProgress__line"><span class="success" style="width: 50%"></span></div>
                     <div class="lkProgress__percent">50% пройдено</div>
                   </div>
                   <div class="lkProgress__item">
                     <div class="lkProgress__label">Стратегический менеджмент</div>
-                    <div class="lkProgress__line"><span style="width: 15%"></span></div>
+                    <div class="lkProgress__line"><span class="danger" style="width: 15%"></span></div>
                     <div class="lkProgress__percent">15% пройдено</div>
                   </div>
                   <div class="lkProgress__item">
                     <div class="lkProgress__label">Стратегический менеджмент в контексте управления государством</div>
-                    <div class="lkProgress__line"><span style="width: 75%"></span></div>
+                    <div class="lkProgress__line"><span class="seccondary" style="width: 75%"></span></div>
                     <div class="lkProgress__percent">75% пройдено</div>
                   </div>
                   <div class="lkProgress__item">
                     <div class="lkProgress__label">Стратегический менеджмент</div>
-                    <div class="lkProgress__line"><span style="width: 92%"></span></div>
+                    <div class="lkProgress__line"><span class="primary" style="width: 92%"></span></div>
                     <div class="lkProgress__percent">92% пройдено</div>
                   </div>
                   <div class="lkProgress__item">
                     <div class="lkProgress__label">Стратегический менеджмент в контексте управления государством</div>
-                    <div class="lkProgress__line"><span style="width: 60"></span></div>
-                    <div class="lkProgress__percent">60 пройдено</div>
+                    <div class="lkProgress__line"><span class="muted" style="width: 60%"></span></div>
+                    <div class="lkProgress__percent">60% пройдено</div>
                   </div>
                 </div>
               </div>
@@ -406,35 +406,6 @@
                   </div>
                 </div>
               </div>
-              <h2 class="subtitle">Личный прогресс</h2>
-              <!-- begin progressBar-->
-              <div class="progressBar__wrap">
-                <div class="progressBar">
-                  <div class="progressBar__line" style="width: 100%; background: #2B89F8">
-                    <div class="progressBar__text" style="color: #FFFFFF">Первый курс 100%</div>
-                  </div>
-                </div>
-                <div class="progressBar">
-                  <div class="progressBar__line" style="width: 75%; background: #279F5E">
-                    <div class="progressBar__text" style="color: #FFFFFF">Второй курс 75%</div>
-                  </div>
-                </div>
-                <div class="progressBar">
-                  <div class="progressBar__line" style="width: 25%; background: #FFAB48">
-                    <div class="progressBar__text" style="color: #2F2B38">Третий курс 25%</div>
-                  </div>
-                </div>
-                <div class="progressBar">
-                  <div class="progressBar__line" style="width: 7%; background: #FF3205"></div>
-                  <div class="progressBar__text" style="color: #2F2B38">первая программа обучения 7%</div>
-                </div>
-                <div class="progressBar">
-                  <div class="progressBar__line" style="width: 35%; background: #D937BF">
-                    <div class="progressBar__text" style="color: #FFFFFF">Вторая программа обучения 35%</div>
-                  </div>
-                </div>
-              </div>
-              <!-- end progressBar-->
               <h2 class="subtitle">Общий прогресс</h2>
               <div class="chartBox"><img src="img/chart.jpg" alt=""/></div>
             </div>
