--- a/th-user.html
+++ b/th-user.html
@@ -202,16 +202,16 @@
               <h2 class="subtitle">Мои сертификаты</h2>
                   <div class="lkSerts">
                     <div class="lkSerts__item">
-                      <div class="lkSerts__img"><img src="img/sert-1.jpg" alt=""/></div>
-                      <div class="lkSerts__name">«Сертифицированный <br>менеджер»</div>
+                      <div class="lkSerts__img"><img src="img/sert-undefined.jpg" alt=""/></div>
+                      <div class="lkSerts__name">«Сертифицированный менеджер»</div>
                     </div>
                     <div class="lkSerts__item">
-                      <div class="lkSerts__img"><img src="img/sert-2.jpg" alt=""/></div>
-                      <div class="lkSerts__name">«Сертифицированный <br>менеджер»</div>
+                      <div class="lkSerts__img"><img src="img/sert-undefined.jpg" alt=""/></div>
+                      <div class="lkSerts__name">«Сертифицированный менеджер»</div>
                     </div>
                     <div class="lkSerts__item">
-                      <div class="lkSerts__img"><img src="img/sert-3.jpg" alt=""/></div>
-                      <div class="lkSerts__name">«Сертифицированный <br>менеджер»</div>
+                      <div class="lkSerts__img"><img src="img/sert-undefined.jpg" alt=""/></div>
+                      <div class="lkSerts__name">«Сертифицированный менеджер»</div>
                     </div>
                   </div>
               <div class="lkForm">
