--- a/st-courses.html
+++ b/st-courses.html
@@ -117,6 +117,206 @@
             <div class="lk__content">
               <h2 class="subtitle">Рекомендательная система</h2>
               <p>Выберите, в каком направлении Вы хотели бы развиваться, и подберем индивидуальную программу обучения для Вас</p>
+              <!-- begin lkTags-->
+              <div class="lkTags__grid">
+                <div class="lkTags__col">
+                  <div class="lkTags__title">Я могу...</div>
+                  <div class="lkTags">
+                    <div class="lkTags__tag">Я владею стратегией переговоров
+                      <div class="lkTags__delete"></div>
+                    </div>
+                    <div class="lkTags__tag">Я умею вести переговоры
+                      <div class="lkTags__delete"></div>
+                    </div>
+                    <div class="lkTags__tag">Переговоры на иностранном языке
+                      <div class="lkTags__delete"></div>
+                    </div>
+                    <div class="lkTags__tag warning">Управленческие навыки
+                      <div class="lkTags__delete"></div>
+                    </div>
+                    <div class="lkTags__tag warning">Менеджмент персонала
+                      <div class="lkTags__delete"></div>
+                    </div>
+                    <div class="lkTags__tag warning">Умелый руководитель
+                      <div class="lkTags__delete"></div>
+                    </div>
+                    <div class="lkTags__tag success">MySQL
+                      <div class="lkTags__delete"></div>
+                    </div>
+                    <div class="lkTags__tag success">Аналитика баз данных
+                      <div class="lkTags__delete"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="lkTags__col">
+                  <div class="lkTags__title">Я хочу...</div>
+                  <div class="lkTags">
+                    <div class="lkTags__tag">Общение без стеснения
+                      <div class="lkTags__delete"></div>
+                    </div>
+                    <div class="lkTags__tag">Ясная поставленная речь
+                      <div class="lkTags__delete"></div>
+                    </div>
+                    <div class="lkTags__tag">Хорошая дикция
+                      <div class="lkTags__delete"></div>
+                    </div>
+                    <div class="lkTags__tag warning">Навыки администратора
+                      <div class="lkTags__delete"></div>
+                    </div>
+                    <div class="lkTags__tag warning">Навыки лидера
+                      <div class="lkTags__delete"></div>
+                    </div>
+                    <div class="lkTags__tag success">Администрирование баз данных
+                      <div class="lkTags__delete"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="lkTags__grid">
+                <div class="lkTags__col">
+                  <div class="lkTags__sub">Начните ввод для выбора тега в категорию «Я могу» </div>
+                  <div class="lkTags__item open" data-collapse-body="">
+                    <div class="lkTags__toggle" data-collapse-toggle="">Стратегическое мышление<i class="icon_caret"></i></div>
+                    <div class="lkTags__drop">
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Навыки переговоров</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Переговоры на английском языке</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Сложные диалоги</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Общение</span>
+                      </label>
+                    </div>
+                  </div>
+                  <div class="lkTags__item" data-collapse-body="">
+                    <div class="lkTags__toggle" data-collapse-toggle="">Системное мышление<i class="icon_caret"></i></div>
+                    <div class="lkTags__drop">
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Навыки переговоров</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Переговоры на английском языке</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Сложные диалоги</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Общение</span>
+                      </label>
+                    </div>
+                  </div>
+                  <div class="lkTags__item" data-collapse-body="">
+                    <div class="lkTags__toggle" data-collapse-toggle="">Инновационное мышление<i class="icon_caret"></i></div>
+                    <div class="lkTags__drop">
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Навыки переговоров</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Переговоры на английском языке</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Сложные диалоги</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Общение</span>
+                      </label>
+                    </div>
+                  </div>
+                  <div class="lkTags__item" data-collapse-body="">
+                    <div class="lkTags__toggle" data-collapse-toggle="">Критическое мышление<i class="icon_caret"></i></div>
+                    <div class="lkTags__drop">
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Навыки переговоров</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Переговоры на английском языке</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Сложные диалоги</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Общение</span>
+                      </label>
+                    </div>
+                  </div>
+                </div>
+                <div class="lkTags__col">
+                  <div class="lkTags__sub">Начните ввод для выбора тега в категорию «Я хочу» </div>
+                  <div class="lkTags__item open" data-collapse-body="">
+                    <div class="lkTags__toggle" data-collapse-toggle="">Стратегическое мышление<i class="icon_caret"></i></div>
+                    <div class="lkTags__drop">
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Навыки переговоров</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Переговоры на английском языке</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Сложные диалоги</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Общение</span>
+                      </label>
+                    </div>
+                  </div>
+                  <div class="lkTags__item" data-collapse-body="">
+                    <div class="lkTags__toggle" data-collapse-toggle="">Системное мышление<i class="icon_caret"></i></div>
+                    <div class="lkTags__drop">
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Навыки переговоров</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Переговоры на английском языке</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Сложные диалоги</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Общение</span>
+                      </label>
+                    </div>
+                  </div>
+                  <div class="lkTags__item" data-collapse-body="">
+                    <div class="lkTags__toggle" data-collapse-toggle="">Инновационное мышление<i class="icon_caret"></i></div>
+                    <div class="lkTags__drop">
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Навыки переговоров</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Переговоры на английском языке</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Сложные диалоги</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Общение</span>
+                      </label>
+                    </div>
+                  </div>
+                  <div class="lkTags__item" data-collapse-body="">
+                    <div class="lkTags__toggle" data-collapse-toggle="">Критическое мышление<i class="icon_caret"></i></div>
+                    <div class="lkTags__drop">
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Навыки переговоров</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Переговоры на английском языке</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Сложные диалоги</span>
+                      </label>
+                      <label class="lkTags__check">
+                        <input type="checkbox"/><span>Общение</span>
+                      </label>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- end lkTags-->
               <h2 class="subtitle">Компетенции</h2>
               <div class="chartBox"><img src="img/chart-trangle.jpg" alt=""/></div>
               <h2 class="subtitle">Список курсов</h2>
